# health-agent-backend

./: .env.example  .gitignore  alembic.ini  langgraph.json  pyproject.toml  railpack.json
.langgraph_api/: .langgraph_ops.pckl
alembic/: env.py
alembic/versions/: 20260409_01_agent_resources.py  20260416_01_voyage_embeddings.py  20260417_01_shared_conversations.py  20260421_01_users_and_share_ownership.py  20260421_02_threads.py
resources/: .normalize_done  ferman_gut_1.md  ferman_gut_2.md  ferman_gut_3.md  ferman_gut_4.md  ferman_gut_5.md  ferman_gut_6.md  ferman_system_1.md  ferman_system_10.md  ferman_system_11.md  ferman_system_12.md  ferman_system_2.md  ferman_system_3.md  ferman_system_4.md  ferman_system_5.md  ferman_system_6.md  ferman_system_7.md  ferman_system_8.md  ferman_system_9.md  grimhood_acne.md  grimhood_add_adhd.md  grimhood_anxiety.md  grimhood_bluelight.md  grimhood_bone_tissue_surgery_repair.md  grimhood_covid.md  grimhood_dopamine.md  grimhood_emf.md  grimhood_fertility.md  grimhood_flight.md  grimhood_gaba.md  grimhood_glyphosate_detox.md  grimhood_gut.md  grimhood_gut_health.md  grimhood_hair_growth.md  grimhood_harm_reduction.md  grimhood_heavy_metal_detox.md  grimhood_immunity.md  grimhood_iron_detox.md  grimhood_lyme_disease.md  grimhood_magnesium.md  (+258 more)
scripts/: crawl_peat_index.py  normalize_peat.py
src/health_agent/: agent.py  auth.py  cli.py  config.py  graph.py  http_app.py  models.py  server.py  state.py  tools.py
src/health_agent/db/: __init__.py  core.py  models.py
src/health_agent/rag/: ingest.py  resources.py  retriever.py
tests/: conftest.py  test_graph.py  test_models.py  test_rag.py  test_tools.py
