[project]
name = "health-agent"
version = "0.1.0"
description = "LangGraph-based health agent with RAG over wellness resources"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1",
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langchain-anthropic>=1.4",
    "langchain-xai>=1.2",
    "langchain-text-splitters>=1.1",
    "chromadb>=1.5",
    "pydantic-settings>=2.13",
    "typer>=0.24",
    "langchain-chroma>=1.1",
    "langgraph-cli[inmem]>=0.4",
    "langsmith>=0.7.19",
]

[project.scripts]
health-agent = "health_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]
