[project]
name = "health-agent"
version = "0.1.0"
description = "LangGraph-based health agent with RAG over wellness resources"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.1.6",
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langchain-anthropic>=1.4",
    "langchain-xai>=1.2",
    "langchain-text-splitters>=1.1",
    "pydantic-settings>=2.13",
    "typer>=0.24",
    "langgraph-cli[inmem]==0.4.21",
    "langgraph-api==0.7.99",
    "langsmith==0.7.30",
    "langchain-community>=0.4.1",
    "flashrank>=0.2.10",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "psycopg[binary]>=3.2.9",
    "pgvector>=0.4.1",
]

[project.scripts]
health-agent = "health_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]
